# ChangeLog for sys-devel/automake
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/automake/ChangeLog,v 1.93 2006/10/30 13:58:12 uberlord Exp $

  30 Oct 2006; Roy Marples <uberlord@gentoo.org> automake-1.6.3.ebuild,
  automake-1.7.9-r1.ebuild:
  Added ~sparc-fbsd keyword.

  24 Oct 2006; Roy Marples <uberlord@gentoo.org> automake-1.4_p6.ebuild:
  Added ~sparc-fbsd keyword.

  18 Oct 2006; Roy Marples <uberlord@gentoo.org> automake-1.10.ebuild:
  Added ~sparc-fbsd keyword.

  17 Oct 2006; Roy Marples <uberlord@gentoo.org> automake-1.9.6-r2.ebuild:
  Added ~sparc-fbsd keyword.

*automake-1.10 (16 Oct 2006)

  16 Oct 2006; Mike Frysinger <vapier@gentoo.org> +automake-1.10.ebuild:
  Version bump.

  22 Jul 2006; Bryan Østergaard <kloeri@gentoo.org>
  automake-1.9.6-r2.ebuild:
  Stable on alpha.

  09 Jul 2006; Joshua Kinard <kumba@gentoo.org> automake-1.9.6-r2.ebuild:
  Marked stable on mips.

  28 Jun 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  automake-1.9.6-r2.ebuild:
  ppc stable, #138145

  28 Jun 2006; Luis Medinas <metalgod@gentoo.org> automake-1.9.6-r2.ebuild:
  Stable on amd64. Bug #138145.

  27 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  automake-1.9.6-r2.ebuild:
  Stable on sparc wrt #138145

  27 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  automake-1.9.6-r2.ebuild:
  Stable on x86 wrt bug #138145.

  27 Jun 2006; Fabian Groffen <grobian@gentoo.org> automake-1.9.6-r2.ebuild:
  Marked ppc-macos stable for progressive users (bug #138145)

  27 Jun 2006; Markus Rothe <corsair@gentoo.org> automake-1.9.6-r2.ebuild:
  Stable on ppc64; bug #138145

  30 Mar 2006; Diego Pettenò <flameeyes@gentoo.org> automake-1.4_p6.ebuild,
  automake-1.5.ebuild, automake-1.6.3.ebuild, automake-1.7.9-r1.ebuild,
  automake-1.8.5-r3.ebuild, automake-1.9.6-r2.ebuild:
  Add ~x86-fbsd keywords.

*automake-1.9.6-r2 (24 Mar 2006)

  24 Mar 2006; Mike Frysinger <vapier@gentoo.org>