@@ -57,38 +57,38 @@ DIST automake-1.6.3.tar.bz2 476275 RMD160 2ca8c4f2dc6651db8472b61c4cb098493177d6
 DIST automake-1.7.9.tar.bz2 577705 RMD160 d967c0dd5bf4a8430d6b598660a98e7158869556 SHA1 da96734fa972a22cfbc4118dcd222871272e4d96 SHA256 32c13b6ad38ed5e7bfd1756cbc19cf5efd67b7ade2d06000a4c99b0ce94bd46d
 DIST automake-1.8.5.tar.bz2 663182 RMD160 36892a845b189d81593e4b1146352c391c4affac SHA1 b639ff48033e9ac7347a6f938b015107754fdf3a SHA256 84c93aaa3c3651a9e7474b721b0e6788318592509e7de604bafe4ea8049dc410
 DIST automake-1.9.6.tar.bz2 765505 RMD160 ad93e095056f41f0369ac6a06fed3904d8e3514f SHA1 d205dbb274d3ff5be1cf6734f27fb452c7131866 SHA256 8eccaa98e1863d10e4a5f861d8e2ec349a23e88cb12ad10f6b6f79022ad2bb8d
-EBUILD automake-1.10.ebuild 1423 RMD160 448512c7b68b8a3d3e3d79cc5436370128f0c215 SHA1 78e0b652c7c5ef4f4053275d49076e4540664a1c SHA256 077f0059a8f0db5a541596049c886355bf51fb65ae81070113a001a19694f8a6
-MD5 ef0bb53ebb5ad9996c13aad8790ff1b0 automake-1.10.ebuild 1423
-RMD160 448512c7b68b8a3d3e3d79cc5436370128f0c215 automake-1.10.ebuild 1423
-SHA256 077f0059a8f0db5a541596049c886355bf51fb65ae81070113a001a19694f8a6 automake-1.10.ebuild 1423
-EBUILD automake-1.4_p6.ebuild 1875 RMD160 9e9ce10215bdde204f896255f4749b84b1a74329 SHA1 2a5384c927c206adb5f756ad6e5f9c1ce2864b38 SHA256 a2c5eb438f498c1ab92cd9a3d0a0bb906bf0eeee3b4c128bcd4b57c61234d55d
-MD5 83f7c7558346b76d9eaa9abeabf0d047 automake-1.4_p6.ebuild 1875
-RMD160 9e9ce10215bdde204f896255f4749b84b1a74329 automake-1.4_p6.ebuild 1875
-SHA256 a2c5eb438f498c1ab92cd9a3d0a0bb906bf0eeee3b4c128bcd4b57c61234d55d automake-1.4_p6.ebuild 1875
-EBUILD automake-1.5.ebuild 1744 RMD160 85a86c430ad63eb42d251da789482473298351df SHA1 64addb2be3e77f3ea715696c524bdae8fb023696 SHA256 ff710e3db2314b5e7d6514d2cf22ab2b03c5a829e0271187eec6f9c2ff56f94c
-MD5 1df9be2ff009d9f77173ff988bcb14dd automake-1.5.ebuild 1744
-RMD160 85a86c430ad63eb42d251da789482473298351df automake-1.5.ebuild 1744
-SHA256 ff710e3db2314b5e7d6514d2cf22ab2b03c5a829e0271187eec6f9c2ff56f94c automake-1.5.ebuild 1744
-EBUILD automake-1.6.3.ebuild 1414 RMD160 4abeaa4e99f3818bad813eefc0cad5f8c82e6d8a SHA1 f00de5e642b1df2eca7bdf040b34d7318a3e8b07 SHA256 a3d10c73c5319b89cfd561e8f0c28dfc0b40cfd1d51765cb9f7f9aa614f1df9e
-MD5 012bd80173ea3f0d7d84e7bbfb8e54a2 automake-1.6.3.ebuild 1414
-RMD160 4abeaa4e99f3818bad813eefc0cad5f8c82e6d8a automake-1.6.3.ebuild 1414
-SHA256 a3d10c73c5319b89cfd561e8f0c28dfc0b40cfd1d51765cb9f7f9aa614f1df9e automake-1.6.3.ebuild 1414
-EBUILD automake-1.7.9-r1.ebuild 1489 RMD160 4a7cc4f3aeb3362c8aa1d34a266afd41b50a9e9f SHA1 361c30ce0f6129318d3f92a44046d866e465d3e6 SHA256 99d56366b0006f91ca8840fd72e47fb5e687598b98fa7039f36b043814dc6240
-MD5 697a346dcebf84b72ca0a450cc9559f0 automake-1.7.9-r1.ebuild 1489
-RMD160 4a7cc4f3aeb3362c8aa1d34a266afd41b50a9e9f automake-1.7.9-r1.ebuild 1489
-SHA256 99d56366b0006f91ca8840fd72e47fb5e687598b98fa7039f36b043814dc6240 automake-1.7.9-r1.ebuild 1489
-EBUILD automake-1.8.5-r3.ebuild 1487 RMD160 60f511a07c989e5629149f5addb47351573adb0d SHA1 166c9f846e433f4d9c39b6dddd7f3be6c20f2575 SHA256 e4efd29d60c795e375676fa741cb76e91d5c5095c89d1e7bf4bdbc2675166d56
-MD5 fc225c313340f54c2c63374fd29e36fd automake-1.8.5-r3.ebuild 1487
-RMD160 60f511a07c989e5629149f5addb47351573adb0d automake-1.8.5-r3.ebuild 1487
-SHA256 e4efd29d60c795e375676fa741cb76e91d5c5095c89d1e7bf4bdbc2675166d56 automake-1.8.5-r3.ebuild 1487
-EBUILD automake-1.9.6-r2.ebuild 1626 RMD160 cfd58806911efdbbad3f0850b9ef5f323864dce1 SHA1 be57a1ee30e3002c91ff1646f74974897d061ade SHA256 a0a5b4dd78deb8c035a1f596fb2271e2f68f4a147b88104741576ffc3b1dbad8
-MD5 984d02358aa9f3296b5713541dca6aed automake-1.9.6-r2.ebuild 1626
-RMD160 cfd58806911efdbbad3f0850b9ef5f323864dce1 automake-1.9.6-r2.ebuild 1626
-SHA256 a0a5b4dd78deb8c035a1f596fb2271e2f68f4a147b88104741576ffc3b1dbad8 automake-1.9.6-r2.ebuild 1626
-MISC ChangeLog 15060 RMD160 1048cb50666411c26c4696b4d467884ce67dec2e SHA1 cb8a9f5ecf500317c9ee1fb7b18f4004ff1d865c SHA256 f79e9bef0cf2e096e64dec8ef98ba363e9885f663a51156b8b8ef80aa4e592bf
-MD5 710e48afb948d5b710bb8565fe2c1287 ChangeLog 15060
-RMD160 1048cb50666411c26c4696b4d467884ce67dec2e ChangeLog 15060
-SHA256 f79e9bef0cf2e096e64dec8ef98ba363e9885f663a51156b8b8ef80aa4e592bf ChangeLog 15060
+EBUILD automake-1.10.ebuild 1422 RMD160 ad3ec77ce441d2527f5a58d7a56d248344e3836f SHA1 33ba095ee8b44ee828e6c2006e231f5d252ba23d SHA256 2315688ea14311a8829317a2bcdf916d6ae6478556bd4940239fce11846c6c53
+MD5 1772f5bf7a2def4de422cfd56d2f9545 automake-1.10.ebuild 1422
+RMD160 ad3ec77ce441d2527f5a58d7a56d248344e3836f automake-1.10.ebuild 1422
+SHA256 2315688ea14311a8829317a2bcdf916d6ae6478556bd4940239fce11846c6c53 automake-1.10.ebuild 1422
+EBUILD automake-1.4_p6.ebuild 1874 RMD160 cfd583f585a89486c015b5d62e0f31482f660f9a SHA1 fe9682092688589c5ec11c97fa766e84e3ddcb7e SHA256 fdc4493bd2ab4ef29d7b31562d05ba920847e45bb5fcdf02ca5b40d74c70e21d
+MD5 a7d3a22224ab5e9872a5be4864fe611a automake-1.4_p6.ebuild 1874
+RMD160 cfd583f585a89486c015b5d62e0f31482f660f9a automake-1.4_p6.ebuild 1874
+SHA256 fdc4493bd2ab4ef29d7b31562d05ba920847e45bb5fcdf02ca5b40d74c70e21d automake-1.4_p6.ebuild 1874
+EBUILD automake-1.5.ebuild 1742 RMD160 abb092991df2bfbb1d3af3fbc866d095cbefa932 SHA1 f7195129b2c29c5f79200d66f4f8a0a8faf2b2b0 SHA256 ac6e4fbef5c905444bad1310a038c7787c3454435e5ddf37c7c56dfb37c487fe
+MD5 70b71f936799f8d313bd1a0675bd1e81 automake-1.5.ebuild 1742
+RMD160 abb092991df2bfbb1d3af3fbc866d095cbefa932 automake-1.5.ebuild 1742
+SHA256 ac6e4fbef5c905444bad1310a038c7787c3454435e5ddf37c7c56dfb37c487fe automake-1.5.ebuild 1742
+EBUILD automake-1.6.3.ebuild 1413 RMD160 ade4b3889c5e89849ca10feb8bddc8c40045067c SHA1 eb56b226eeda9e4e88eb6dd376ede32a1aeb0de7 SHA256 1dc32d290c565318258d66b2021250ea32e0972921a74c8000bfeee58fda7f15
+MD5 7d7f2986ba4f6db15dbbff304f3f348d automake-1.6.3.ebuild 1413
+RMD160 ade4b3889c5e89849ca10feb8bddc8c40045067c automake-1.6.3.ebuild 1413
+SHA256 1dc32d290c565318258d66b2021250ea32e0972921a74c8000bfeee58fda7f15 automake-1.6.3.ebuild 1413
+EBUILD automake-1.7.9-r1.ebuild 1488 RMD160 aa6c3539ad443a2b150062c3e7b4c4094bc33e33 SHA1 da9c9d1e23fd5caa0489e58e14a59bf6d3a13d70 SHA256 3c22a29a47caaf25e1d3e2c7d7be38d95ea3c4909bcb00cc17346f473eaddf33
+MD5 3f92dc36c2d20e8df2c7c3b63587f3f1 automake-1.7.9-r1.ebuild 1488
+RMD160 aa6c3539ad443a2b150062c3e7b4c4094bc33e33 automake-1.7.9-r1.ebuild 1488
+SHA256 3c22a29a47caaf25e1d3e2c7d7be38d95ea3c4909bcb00cc17346f473eaddf33 automake-1.7.9-r1.ebuild 1488
+EBUILD automake-1.8.5-r3.ebuild 1485 RMD160 fa2b92e25f137aa00cc360b6b9f6baff85ca6784 SHA1 8d7ac56c8cb017ebdf66171065390d4e1ffa7d4c SHA256 b95fdee0d7e7961b7a184cd7079b6a871afc7f7f8d5abff12ec8d35122d0aeda
+MD5 cf3b15454d44832a7d393ed9053d162d automake-1.8.5-r3.ebuild 1485
+RMD160 fa2b92e25f137aa00cc360b6b9f6baff85ca6784 automake-1.8.5-r3.ebuild 1485
+SHA256 b95fdee0d7e7961b7a184cd7079b6a871afc7f7f8d5abff12ec8d35122d0aeda automake-1.8.5-r3.ebuild 1485
+EBUILD automake-1.9.6-r2.ebuild 1625 RMD160 b0061143fba655ec4582c57fd97523f600df7890 SHA1 5e0a66556d2aa0683f29d33b818c19cee0082fb1 SHA256 32325aba198a9147ae13b7a7176595fd9917124ae4b99b37bf5f322f8b985147
+MD5 d146480a667d018ed946e1cbc64c6196 automake-1.9.6-r2.ebuild 1625
+RMD160 b0061143fba655ec4582c57fd97523f600df7890 automake-1.9.6-r2.ebuild 1625
+SHA256 32325aba198a9147ae13b7a7176595fd9917124ae4b99b37bf5f322f8b985147 automake-1.9.6-r2.ebuild 1625
+MISC ChangeLog 15323 RMD160 473ed6fa0086e517d42e0156f76d528406065953 SHA1 48f65c0bbfb56e0426a923d64c208cce392b1a3e SHA256 afefa88ffbe4dad9ae453dbb0fd97ca4b1e2a23b9196a2d004e54cd9cb412200
+MD5 fe30c2e704a74373e0129985e1202c2d ChangeLog 15323
+RMD160 473ed6fa0086e517d42e0156f76d528406065953 ChangeLog 15323
+SHA256 afefa88ffbe4dad9ae453dbb0fd97ca4b1e2a23b9196a2d004e54cd9cb412200 ChangeLog 15323
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 metadata.xml 164
